
12/02/2002 Michael Goffioul <goffioul@imec.be>
  * kdeprintfax: added %email to possible command tags. The e-mail address
    is retrieved from standard settings in KControl module. The tag can
    also be used in the "Name" field of the options dialog
  * LPR: completion of the LPRngTool handler + implementation of dynamic
    driver directories (to be done: should also be configurable in the
    options dialog)
  * general: Fixed bug -> XML commands couild not be saved
  * CUPS: FontPath directive is now considered as a string list, multiple
    directives are supported and a listview is used in the GUI
  * CUPS: configuration tool now handles gracefully unrecognized options,
    a warning is issued, and they are restored as-is on file saving.

13/02/2002 Michael Goffioul <goffioul@imec.be>
  * CUPS: added support for job-billing and page-label, and put them
    along with the scredule option into a single "Advanced" tab.
  * CUPS: added job billing info to the job viewer
  * CUPS: added job priority selection in the Advanced tab of the print
    dialog
  * general: allow multi selection in the file list of print dialog

14/02/2002 Michael Goffioul <goffioul@imec.be>
  * CUPS: added the possibility to edit job attributes on-the-fly using
    a dialog similar to the printer properties dialog. Still the be fixed:
    page ranges (problem with option encoding in CUPS).

15/02/2002 Michael Goffioul <goffioul@imec.be>
  * general: fixed infinite recursion bug in KIconSelectAction
  * CUPS: temporarily disabled edition of page-ranges as it seems CUPS is
    buggy. I should find a workaround.
  * general (CUPS): enable some actions for jobs on remote hosts. It seems
    to work OK between my local LM-8.1 and a remote LM-7.2.

16/02/2002 Michael Goffioul <goffioul@imec.be>
  * CUPS: added direct Foomatic driver support (no need the all PPD package
    from foomatic anymore, driver are loaded directly from Foomatic)